test/scc/decl/semantic-errors/031.a
031.t:3:5: error: enumerator value for 'A' is not an integer constant